--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Smith
+title: Chris Willingham
 description: My Personal Blog
-author: John Smith
-logo: http://aboutashu.com/hcz-jekyll-blog/static/img/avatar.png
-github: https://github.com/ashutosh2k12
+author: Chris Willingham
+logo: https://avatars1.githubusercontent.com/u/934264
+github: https://github.com/clwillingham
 about: Freelance developer
-disqus_shortname: aboutashu
-google_analytics: UA-72862926-1
+disqus_shortname: aboutclw
+#google_analytics: UA-72862926-1
 urls:
     - text: Home
       url: /
@@ -18,10 +18,10 @@ urls:
       url: /projects/
       icon: fa-desktop
     - text: Resume
-      url: '#'
+      url: 'http://www.slideshare.net/ChrisWillingham1/2015resumechriswillinghamnocontactinfo-50776514'
       icon: fa-graduation-cap
     - text: Github
-      url: https://github.com/ashutosh2k12
+      url: https://github.com/clwillingham
       icon: fa-github
     - text: XML Feed
       url: /feed.xml
@@ -48,7 +48,6 @@ enableTags: true
 tagarray: []
 
 url: "http://aboutashu.com/hcz-jekyll-blog"
-baseurl: "/hcz-jekyll-blog"
 paginate: 20
 per_page: 20
 paginate_path: "/page:num/"
