--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ share:
 enableTags: true
 tagarray: []
 
-url: "https://clwillingham.github.io/"
+#url: "https://clwillingham.github.io/"
 paginate: 20
 per_page: 20
 paginate_path: "/page:num/"
