--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Chris Willingham
 description: My Personal Blog
 author: Chris Willingham
-logo: https://avatars1.githubusercontent.com/u/934264
+logo: /static/img/profile-photo.jpg
 github: https://github.com/clwillingham
-about: Freelance developer
-disqus_shortname: aboutclw
+about: Secret Ninja
+disqus_shortname: clwillingham
 #google_analytics: UA-72862926-1
 urls:
     - text: Home
@@ -47,7 +47,7 @@ share:
 enableTags: true
 tagarray: []
 
-url: "https://clwillingham.github.io/"
+url: "http://localhost:5000/"
 paginate: 20
 per_page: 20
 paginate_path: "/page:num/"
