--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ share:
 enableTags: true
 tagarray: []
 
-url: "http://localhost:5000/"
+url: "http://clwillingham.github.io/"
 paginate: 20
 per_page: 20
 paginate_path: "/page:num/"
